--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.39.0",
+    "axios": "^1.7.2",
     "firebase": "^10.12.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -18,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
@@ -26,6 +29,7 @@
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
